[package]
name = "download-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
directories = "6.0.0"
fern = "0.6"
log = "0.4"
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.135"
